--- a/main-poster.tex
+++ b/main-poster.tex
@@ -6,12 +6,14 @@
 % Theme: inner, outer, font and colors
 % ----------------------------------------------------------------------------------------
 \usepackage[institute=FAU,
-		  SecondLogo = template-art/TU-Berlin-Logo.svg,
-            ThirdLogo = atelier/UMN2.png,
-            SecondLogoFactor=0.3,
-            ThirdLogoFactor=0.55,
+			WordMark = template-art/TU-Berlin-Logo.svg,
+		    SecondLogo = atelier/UMN2.png,
+            ThirdLogo = template-art/FAUWortmarkeBlau.pdf,
+            FirstLogoFactor=0.3,
+            SecondLogoFactor=0.55,
+            ThirdLogoFactor=0.5,
             WordMarkRight=None,
-		  size=a0,
+		    size=a0,
             url = {tim.roith@fau.de},
             fontsize=18,
             fontbaselineskip=24,
