--- a/sections/AMLE.tex
+++ b/sections/AMLE.tex
@@ -94,7 +94,8 @@ Larger length scale $\nlscale>0$: consider \color{orong}\textbf{homogenized oper
 \nlscale^2 \Delta_\infty^\nlscale u(x) &:= \sup_{y\in \closure B(x;\nlscale)}(u(y)-u(x)) + \inf_{y\in \closure B(x;\nlscale)}(u(y)-u(x)).
 \end{align*}
 %
-\fbox{\begin{minipage}[b][9cm][t]{.4\textwidth}%
+\fbox{\begin{minipage}[b][9.5cm][t]{.4\textwidth}%
+\vspace{.2em}
 \small\textbf{Local to Non-Local}: CDF implies \cite{armstrong2010easy} for
 \begin{align*}
 %u^\nlscale(x) = \sup_{\overline B(x;\nlscale)}u\quad\text{and}\quad
@@ -110,7 +111,8 @@ that
 %
 \hfill%
 %
-\fbox{\begin{minipage}[b][9cm][t]{.52\textwidth}
+\fbox{\begin{minipage}[b][9.5cm][t]{.52\textwidth}
+\vspace{.2em}
 \small\textbf{Discrete to Non-Local}:
 CDF on the graph implies \cite{bungert2021uniform} for $u_n^\nlscale(x):=\max_{y\in \overline B(x;\nlscale)\cap\domain_n}\vec u_n(y)$ that
 %
