--- a/sections/bottom.tex
+++ b/sections/bottom.tex
@@ -45,12 +45,14 @@ In \cite{bungert2021uniform} we prove:
 where
 $\sigma_\eta := \sup_{t>0}\eta(t)t$ and $\tau_\eta := \sup_{t>0}\sigma_\eta\eta(t)^{-1}-t.$
 %
+\vspace{.2em}
+
 \fbox{%
-\begin{minipage}{\textwidth}%
+\begin{minipage}[b][4cm][c]{\textwidth}%
 \textbf{Sparse regime}: If $\gres_n\lesssim\gscale_n\lesssim\gres_n^{\frac{5}{9}}$ the rate is $\left({\gres_n}/{\gscale_n}\right)^{\frac{1}{4}}$.\\
 \textbf{Dense regime}: If $\gscale_n\gtrsim\gres_n^{\frac{5}{9}}$ the rate is $\gscale_n^{\frac{1}{5}}$.
 \end{minipage}}%
-\vspace{1em}
+\vspace{.5em}
 {\color{BaseDarkColor}\usebeamerfont{block title} \noindent What about $\gscale_n\sim\gres_n$? Percolation!}\\
 \small
 On a unit intensity Poisson Point Process $X\subset\R^d$ and for $h>0$ let $\Pi_h(x,y)$ be the set of admissible paths and
@@ -130,19 +132,20 @@ Infinity harmonic function $u(x_1,x_2)=\abs{x_1}^{4/3}-\abs{x_2}^{4/3}$ on $\dom
 
 \begin{minipage}{.32\textwidth}%
 \small
+\centering%
 AMLE rates for \hfill
 
 $\eta(s)=\tfrac{1}{s}$:
-
-\includegraphics[width=\textwidth]{atelier/aronsson_star_singular_plot}
+\includegraphics[width=1.02\textwidth]{atelier/aronsson_star_singular_plot}
 \end{minipage}%
 %
 \hfill%
 %
 \begin{minipage}{.65\textwidth}%
 \small
-Ratio convergence rates for\\percolation length scales:
 \centering
+Ratio convergence rates for\\percolation length scales:
+\vskip3pt%
 \includegraphics[width=\textwidth]{atelier/ratio_convergence_3d}%
 \end{minipage}%
 %
