--- a/styles/beamerposterthemefau.sty
+++ b/styles/beamerposterthemefau.sty
@@ -99,6 +99,7 @@
     \def\ThirdLogoFactor{.3}
 }%
 
+\DeclareOptionBeamer{FirstLogoFactor}{\def\FAULogoFactor{#1}}
 \DeclareOptionBeamer{SecondLogoFactor}{\def\SecondLogoFactor{#1}}
 \DeclareOptionBeamer{ThirdLogoFactor}{\def\ThirdLogoFactor{#1}}
 
